# backend

./: Cargo.toml  README.md  bash.exe.stackdump  diesel.toml
api/: Cargo.toml  diesel.toml
api/services/: marketplace_transaction_service.rs
api/src/: main.rs  schema.rs
api/src/models/: course_progress.rs  marketplace_transaction.rs  support_ticket.rs
api/src/services/: course_progress_service.rs
api/tests/: support_ticket_tests.rs
contracts/certificate/src/: lib.rs  test.rs
contracts/course/: Cargo.toml
contracts/course/src/: course.rs  lib.rs  test.rs
contracts/course/test_snapshots/test/: test_complete_course.1.json  test_create_course.1.json  test_enroll_duplicate_panics.1.json  test_enroll_in_course.1.json  test_remove_course.1.json  test_remove_course_with_enrolled_students.1.json  test_unauthorized_operations.1.json  test_unverified_institution.1.json
contracts/institution/: Cargo.toml
contracts/institution/src/: contract.rs
contracts/institution/src/tests/: mod.rs  test_institution.rs
contracts/marketplace/: Cargo.toml
contracts/revoked/: Cargo.toml
contracts/revoked/src/: Revoked.rs  lib.rs  test.rs
contracts/revoked/test_snapshots/test/: test_all_revoked_certificates.1.json  (+3 more)
contracts/storage/: Cargo.toml
contracts/user/: Cargo.toml
contracts/verification/src/: lib.rs  test.rs  verification.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-03-22-231420_create_marketplace_transactions/: down.sql
migrations/2025-03-23-003447_create_course_progress/: up.sql
tests/: course_progress_tests.rs
(+8 files in other folders)
