[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

# --- Add Diesel + Postgres support ---
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.0"      # optional, if you want .env support
chrono = "0.4"          # optional, if you need timestamps
serde = { version = "1.0", features = ["derive"] }  # optional, for serialization
serde_json = "1.0"      # optional

[[bin]]
name = "api"
path = "src/main.rs"
